This is the history of all changes that were made to Novocode Toolkit. The
versions are listed latest to earliest.

RELEASE 1.3.0 (2002-12-29)

    * Fixed bug in com.novocode.tk.util.Base64.decode.

    * Added class com.novocode.tk.io.IndentWriter.

    * Fixed bug in com.novocode.tk.util.Timer.

    * Added method decode(String) to com.novocode.tk.util.SGMLLiteral.

    * Added a constructor to com.novocode.tk.awt.StringRequester for
      creating a multi-line TextArea instead of a TextField. Changed the
      getTextField method into a getTextComponent method.

    * Added method com.novocode.tk.awt.MessageDialog.ask.

    * Fixed bug in com.novocode.tk.io.ByteStringInputStream's viewLine
      method: Under certain circumstances single "\n" line terminators
      were not recognized as such.

    * Fixed bug in FileStreamExternalFormConverter.

    * Added methods encodeBytes and decodeBytes to Base16.


RELEASE 1.2.0 (2000-06-26)

    * Added class com.novocode.tk.text.HttpDateFormat.

    * The ConstByteString class was broken. The fields data, length and
      offset are now declared as public directly in ConstByteString
      instead of ByteString.

    * CommandLineConfigurator displays better error messages for
      InvocationTargetExceptions.

    * CommandLineConfigurator's automatic top text creation did not
      work correctly for beans with default properties.

    * Changed CommandLineConfigurator's add...() method signatures to
      include an optional "typeStr" parameter.

    * CommandLineConfigurator's addPropertyOption() methods can now
      create the option's long name automatically (like for automatically
      added property options) when null is specified.

    * Added class com.novocode.tk.beans.ExternalFormConverter and several
      subclasses.

    * Renamed class com.novocode.tk.io.AsciiInputStreamReader to
      com.novocode.tk.io.Latin1InputStreamReader.

    * Added method getException() to com.novocode.tk.io.StreamConnector.