@@ -1,6 +1,10 @@
 This is the history of all changes that were made to Novocode Toolkit. The
 versions are listed latest to earliest.
 
+
+    * Added methods for Base64 encoding & decoding of binary data.
+
+
 RELEASE 1.3.0 (2002-12-29)
 
     * Fixed bug in com.novocode.tk.util.Base64.decode.
